Fixes color contrast of emoji

--- a/app/assets/stylesheets/ratings.scss
+++ b/app/assets/stylesheets/ratings.scss
@@ -1,6 +1,4 @@
-// Place all the styles related to the ratings controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+@import 'colors';
 
 .grade {
   font-weight: bold;
@@ -50,22 +48,25 @@
 }
 
 .fa-angry {
-  font-size: 1.4rem;
-  color: red;
+  font-size: 1.9rem;
+  color: $red;
+  text-shadow: 0px 0px 3px white;
 }
 
 .fa-frown {
-  font-size: 1.4rem;
-  color: orange;
+  font-size: 1.9rem;
+  color: $orange;
+  text-shadow: 0px 0px 3px black;
 }
 .fa-meh {
-  font-size: 1.4rem;
-  color: yellow;
-  text-shadow: 2px 2px blak;
+  font-size: 1.9rem;
+  color: $yellow;
+  text-shadow: 0px 0px 3px black;
 }
 .fa-smile {
-  font-size: 1.4rem;
-  color: green;
+  font-size: 1.9rem;
+  color: $green;
+  text-shadow: 0px 0px 3px white;
 }
 
 .field .rating {
